--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "kekstagram",
+  "name": "work-test",
   "version": "30.0.0",
   "private": true,
-  "description": "Личный проект «Кекстаграм» от HTML Academy",
+  "description": "Личный учебный самостоятельнй проект",
   "repository": {
     "type": "git",
-    "url": "git@github.com:htmlacademy-javascript/2513873-kekstagram-33.git"
+    "url": "git@github.com:KleoSky/Work-with-CMS.git"
   },
   "bugs": {
-    "url": "https://github.com/htmlacademy-javascript/2513873-kekstagram-33/issues"
+    "url": "https://github.com/KleoSky/Work-with-CMS/issues"
   },
   "devDependencies": {
     "eslint": "8.48.0",
